# memory_manager

./: .clang-format  .gitignore  CMakeLists.txt  memory_manager.md
cmake/: memory_managerConfig.cmake
design/: arch.md
include/: arena.hpp  batch.hpp  config.hpp  ec.hpp  error_condition.hpp  except.hpp  mem_literals.hpp  memmgr.hpp  mmgr.hpp  segment.hpp  smgr.hpp
include/bins/: base_bin.hpp  cache_bin.hpp  instant_bin.hpp  static_bin.hpp
src/: arena.cxx  batch.cxx  ec.cxx  error_condition.cxx  except.cxx  memmgr.cxx  mmgr.cxx  segment.cxx  smgr.cxx
src/bins/: base_bin.cxx  base_bin_impl.cxx  cache_bin.cxx  instant_bin.cxx  static_bin.cxx  static_bin_impl.cxx
tests/: CMakeLists.txt  Test_Memory_Manager.cxx  Test_arena.cxx  Test_batch.cxx  Test_cache_bin.cxx  Test_instant_bin.cxx  Test_static_bin.cxx  Testcase_mem.cxx
